Fix session page
